fix feedback comments.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 #max file and request size
-spring.http.multipart.max-file-size=10MB
-spring.http.multipart.max-request-size=11MB
+spring.http.multipart.max-file-size=5MB
+spring.http.multipart.max-request-size=5MB
+
+server.error.whitelabel.enabled=false
+server.error.path=/error
